[gd_scene load_steps=12 format=2]

[ext_resource path="res://bg/blue.png" type="Texture" id=1]
[ext_resource path="res://scenes/nave.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/spawn_inimigo.gd" type="Script" id=3]
[ext_resource path="res://sounds/Trilha.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/nokiafc22.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/fase1.gd" type="Script" id=6]
[ext_resource path="res://sprites/itens (1).png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.8884, 354.374 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.8884, 343.203 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[node name="fase1" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -200.012 ]
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 181.497, 296.768 )
scale = Vector2( 1.65544, 2.66453 )
texture = ExtResource( 1 )

[node name="nave" parent="." instance=ExtResource( 2 )]
position = Vector2( 181.838, 526.823 )
scale = Vector2( 0.2, 0.2 )
gravity_scale = 0.0

[node name="spawn_inimigo" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="spawn_inimigo"]
wait_time = 1.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -19.1333, 306.132 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 199.02, 643.875 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 382.665, 327.657 )
shape = SubResource( 2 )

[node name="colisor" type="Area2D" parent="."]
position = Vector2( 16.9514, -8.47571 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisor"]
position = Vector2( 163.157, -78.4003 )
scale = Vector2( 28.68, 1 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pontos" type="Label" parent="CanvasLayer"]
margin_left = 24.0393
margin_top = 19.5508
margin_right = 70.0393
margin_bottom = 94.5508
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.666667, 0.74902, 0.262745, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 262.8, 39.8 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="life2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 298.436, 39.8 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="life3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 334.072, 39.8 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
[connection signal="timeout" from="spawn_inimigo/Timer" to="spawn_inimigo" method="_on_Timer_timeout"]
[connection signal="body_entered" from="colisor" to="." method="_on_colisor_body_entered"]
